--- a/GP_Controller_V2.ioc
+++ b/GP_Controller_V2.ioc
@@ -35,39 +35,41 @@ Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=PA6
 Mcu.Pin11=PA7
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PC6
-Mcu.Pin15=PC7
-Mcu.Pin16=PC8
-Mcu.Pin17=PC9
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin12=PB0
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PC6
+Mcu.Pin17=PC7
+Mcu.Pin18=PC8
+Mcu.Pin19=PC9
 Mcu.Pin2=PC0
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PC10
-Mcu.Pin26=PC11
-Mcu.Pin27=PC12
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PA15
+Mcu.Pin27=PC10
+Mcu.Pin28=PC11
+Mcu.Pin29=PC12
 Mcu.Pin3=PC2
-Mcu.Pin30=PB5
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=PB8
-Mcu.Pin34=PB9
-Mcu.Pin35=VP_SYS_VS_tim14
+Mcu.Pin30=PB3
+Mcu.Pin31=PB4
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=PB7
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_SYS_VS_tim14
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=36
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -78,6 +80,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C3_EV_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -129,12 +132,22 @@ PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=PinState,GPIO_PuPd
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
+PB0.Signal=GPIO_Output
 PB10.Locked=true
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Locked=true
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB2.GPIOParameters=PinState,GPIO_PuPd
+PB2.GPIO_PuPd=GPIO_PULLUP
+PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
+PB2.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI3_SCK
@@ -195,7 +208,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
